modified:   styles.css

--- a/styles.css
+++ b/styles.css
@@ -1123,6 +1123,7 @@ video::-webkit-media-controls-volume-slider {
     background: #555;
     border-radius: 5px;
     cursor: pointer;
+    appearance: none;
     -webkit-appearance: none;
 }
 
@@ -1460,6 +1461,7 @@ video::-webkit-media-controls-volume-slider {
 #song-progress {
     width: 100%;
     height: 4px;
+    appearance: none;
     -webkit-appearance: none;
     background: rgba(255,255,255,0.1);
     border-radius: 2px;
@@ -1502,6 +1504,7 @@ video::-webkit-media-controls-volume-slider {
     flex: 1;
     height: 4px;
     -webkit-appearance: none;
+    appearance: none;
     background: rgba(255,255,255,0.1);
     border-radius: 2px;
     cursor: pointer;
